# btoven
# Motalen 2011

CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
PROJECT( BTOVEN )

SET( LIB_NAME btoven )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BTOVEN_SOURCE_DIR}/lib )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${BTOVEN_SOURCE_DIR}/lib )
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${BTOVEN_SOURCE_DIR}/lib )
SET( CMAKE_EXECUTABLE_OUTPUT_DIRECTORY ${BTOVEN_SOURCE_DIR}/bin )
SET( CMAKE_EXECUTABLE_OUTPUT_DIRECTORY_DEBUG ${BTOVEN_SOURCE_DIR}/bin )
SET( CMAKE_EXECUTABLE_OUTPUT_DIRECTORY_RELEASE ${BTOVEN_SOURCE_DIR}/bin )

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( example )

